Managed/HID/Internal/Generated/HidNativeGenerated.g.cs

// Auto-generated by csharp-binding-generator. Do not edit by hand.
using System;
using System.Runtime.InteropServices;

namespace Luna.HID.Internal;

[StructLayout(LayoutKind.Sequential)]
internal partial struct NativeControllerInputState
{
    public int Connected;
    public uint Buttons;
    public float AxisLx;
    public float AxisLy;
    public float AxisRx;
    public float AxisRy;
    public float AxisLt;
    public float AxisRt;
}

internal static partial class HidNativeGenerated
{
    [DllImport("LunaHIDC", EntryPoint = "luna_hid_init_module", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr InitModule();

    [DllImport("LunaHIDC", EntryPoint = "luna_hid_supports_keyboard", CallingConvention = CallingConvention.Cdecl)]
    internal static extern int SupportsKeyboard();

    [DllImport("LunaHIDC", EntryPoint = "luna_hid_get_key_state", CallingConvention = CallingConvention.Cdecl)]
    internal static extern int GetKeyState(ushort key);

    [DllImport("LunaHIDC", EntryPoint = "luna_hid_supports_mouse", CallingConvention = CallingConvention.Cdecl)]
    internal static extern int SupportsMouse();

    [DllImport("LunaHIDC", EntryPoint = "luna_hid_get_mouse_button_state", CallingConvention = CallingConvention.Cdecl)]
    internal static extern int GetMouseButtonState(byte mouseButton);

    [DllImport("LunaHIDC", EntryPoint = "luna_hid_get_mouse_pos", CallingConvention = CallingConvention.Cdecl)]
    internal static extern global::Luna.HID.Point2U GetMousePos();

    [DllImport("LunaHIDC", EntryPoint = "luna_hid_set_mouse_pos", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr SetMousePos(int x, int y);

    [DllImport("LunaHIDC", EntryPoint = "luna_hid_supports_controller", CallingConvention = CallingConvention.Cdecl)]
    internal static extern int SupportsController();

    [DllImport("LunaHIDC", EntryPoint = "luna_hid_get_controller_state", CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeControllerInputState GetControllerState(uint index);

    [DllImport("LunaHIDC", EntryPoint = "luna_hid_set_controller_state", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr SetControllerState(uint index, in global::Luna.HID.ControllerOutputState state);

}
